--- a/main.html
+++ b/main.html
@@ -39,6 +39,21 @@
         </div>
         <button class="exit-popup " data-popup="settings-div"></button>
         <div class="display-none" id="settings-div">Settings div</div>
+        <form calss="color-picker"
+        action="">
+            <fieldset>
+                <legend>Vælg tema</legend>
+                <label for="tema">lys</label>
+                <input type="radio"
+                name="tema"id="lys"checked>
+
+                <label for="tema">mørk</label>
+                <input type="radio"
+                name="tema"id="mørk">
+
+
+            </fieldset>
+        </form>
     
         <button class="exit-popup " data-popup="feedback-div"></button>
         <div class="display-none" id="feedback-div">
