--- a/main.html
+++ b/main.html
@@ -38,22 +38,26 @@
             </div>
         </div>
         <button class="exit-popup " data-popup="settings-div"></button>
-        <div class="display-none" id="settings-div">Settings div</div>
-        <form calss="color-picker"
-        action="">
-            <fieldset>
-                <legend>Vælg tema</legend>
-                <label for="tema">lys</label>
-                <input type="radio"
-                name="tema"id="lys"checked>
 
-                <label for="tema">mørk</label>
-                <input type="radio"
-                name="tema"id="mørk">
+        <div class="display-none" id="settings-div">
+            <h1 class="content">Settings</h1>
+            <h3 class="content">Her finder du indstillinger:</h3>
+            <h1>lærkes ting her</h1>
+            <form class="color-picker" action="">
+                <fieldset>
+                    <legend>Vælg tema</legend>
+                    <label for="tema">lys</label>
+                    <input type="radio" name="tema"id="lys"checked>
+
+                    <label for="tema">mørk</label>
+                    <input type="radio" name="tema"id="mørk">
 
 
-            </fieldset>
-        </form>
+                </fieldset>
+            </form>
+                    
+            <button></button>
+        </div>
     
         <button class="exit-popup " data-popup="feedback-div"></button>
         <div class="display-none" id="feedback-div">
