vacumn -> vacuum spelling..

--- a/main.html
+++ b/main.html
@@ -163,7 +163,7 @@
                         <img src="IMAGES/drill.png" alt="" srcset="">
                     </div>
                 </div>
-                <div class="shared-items-btn" id="vacumn-cleaner-btn">
+                <div class="shared-items-btn" id="vacuum-cleaner-btn">
                     <div class="vacuum-container, button-inner">
                         <h2>Støvsuger</h2>
                         <img src="IMAGES/vacuum.png" alt="">
